Fix banner position on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -514,7 +514,7 @@ input:not([type="submit"]) {
         min-height: 50px;
         height: auto;
         width: 100vw;
-        position: absolute;
+        position: fixed;
         align-items: center;
         justify-content: center;
         flex-wrap: nowrap;
